--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -13,3 +13,9 @@ sniffio==1.3.1
 typing-inspection==0.4.1
 typing_extensions==4.15.0
 websockets==15.0.1
+speechbrain==1.0.2
+torch>=2.7.1
+torchaudio>=2.7.1
+numpy>=2.3.3
+soundfile==0.12.1
+sounddevice==0.4.6
