--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     {name = "Evan Ferreira",email = "evanjfer@gmail.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = ">=3.9,<4.0"
 dependencies = [
     "assemblyai[extras] (>=0.43.1,<0.44.0)",
     "speechbrain (==1.0.2)",
@@ -14,6 +14,7 @@ dependencies = [
     "sounddevice (==0.4.6)",
     "numpy (>=2.3.3,<3.0.0)",
     "cerebras-cloud-sdk (>=1.50.1,<2.0.0)",
+    "elevenlabs (>=2.15.0,<3.0.0)",
     "annotated-types (==0.7.0)",
     "anyio (==4.10.0)",
     "certifi (==2025.8.3)",
