--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     {name = "Evan Ferreira",email = "evanjfer@gmail.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.9,<4.0"
+requires-python = ">=3.11,<4.0"
 dependencies = [
     "assemblyai[extras] (>=0.43.1,<0.44.0)",
     "speechbrain (==1.0.2)",
@@ -28,7 +28,8 @@ dependencies = [
     "sniffio (==1.3.1)",
     "typing-inspection (==0.4.1)",
     "typing-extensions (==4.15.0)",
-    "websockets (==15.0.1)"
+    "websockets (==15.0.1)",
+    "requests (>=2.25.0,<3.0.0)"
 ]
 
 [tool.poetry]
