--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,21 +1,4 @@
-annotated-types==0.7.0
-anyio==4.10.0
-assemblyai==0.43.1
-certifi==2025.8.3
-h11==0.16.0
-httpcore==1.0.9
-httpx==0.28.1
-idna==3.10
-pydantic==2.11.9
-pydantic_core==2.33.2
-python-dotenv==1.1.1
-sniffio==1.3.1
-typing-inspection==0.4.1
-typing_extensions==4.15.0
-websockets==15.0.1
-speechbrain==1.0.2
-torch>=2.7.1
-torchaudio>=2.7.1
-numpy>=2.3.3
-soundfile==0.12.1
-sounddevice==0.4.6
+# Simple API dependencies
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+python-multipart==0.0.6
